--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: allure-report
-      url: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}
+      url: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/allure/
 
     steps:
       - name: Checkout repository
@@ -42,7 +42,7 @@ jobs:
         uses: simple-elf/allure-report-action@master
         if: always()
         with:
-          gh_pages: gh-pages
+          gh_pages: gh-pages/allure
           allure_report: allure-report
           allure_history: allure-history
           allure_results: target/allure-results
@@ -54,4 +54,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: allure-history
+          publish_dir: ./allure
