--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: allure-report
-      url: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/allure/
+      url: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}
 
     steps:
       - name: Checkout repository
@@ -36,7 +36,7 @@ jobs:
         continue-on-error: true
         with:
           ref: gh-pages
-          path: allure
+          path: gh-pages
 
       - name: Build Allure report
         uses: simple-elf/allure-report-action@master
@@ -54,4 +54,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: allure
+          publish_dir: allure-history
